# Learnings

AI_agents/agents-main/1_foundations/community_contributions/alter-ego-gradio-chatbot-usingAzureOpenai/: .env.example  .gitignore  README.md  agent.py  main.py  prompt.py  pyproject.toml  tools.py
AI_agents/agents-main/1_foundations/community_contributions/alter-ego-gradio-chatbot-usingAzureOpenai/static/: summary.txt.example
AI_agents/agents-main/1_foundations/community_contributions/dkisselev-zz/persona_rag/: answer.py  evaluate.py  ingest.py  persona_app.py  pyproject.toml
AI_agents/agents-main/1_foundations/community_contributions/dkisselev-zz/persona_rag/data/: process_data.py
HTML & CSS/: README.md  index.html
Python_lab/: Class and Objects.ipynb  Functions 06-04-2023.ipynb  Global variable.ipynb  List function.ipynb  List.ipynb  Loops.ipynb  Nested For loop.ipynb  Recursion.ipynb  Tupple - Dict 17-04-2023.ipynb  Untitled.ipynb  Untitled1.ipynb  While-loop.ipynb  for loop (list).ipynb  for loop adv.ipynb  for loop assignment set I.ipynb  if-elif-else salary.ipynb  if-else.ipynb  string.ipynb  while loop 28-3-2023 ATM.ipynb
SQL Study/: CM1.sql  H.W. 10-05-2023.sql  Sub_queries class 12.sql  class 1.sql  class 10 procedure rivision.sql  class 2.sql  class 3.sql  class 4.sql  class 5.sql  class 6 & 7 (delimiter).sql  class 8 uploading file to the sql server.sql  function Class  class 11.sql  index_funs class 13.sql  out_sales.sql  practice.sql  trigger_case_class new.sql  trigger_case_class.sql  win_funs calss 13.sql
Statistics for ML/: Course_Details.md  (+5 more)
(+151 files in other folders)
