[project]
name = "alter-ego-gradio-chatbot-usingazureopenai"
version = "0.1.0"
description = "A professional chatbot that represents you on your website. It answers questions about your background, experience, and skills using Azure OpenAI and Gradio."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.3.0",
    "openai>=2.15.0",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
